# mal

./: .gitmodules  Makefile.impls
impls/c.3/: .gitignore  CMakeLists.txt  flake.nix  shell.nix
impls/c.3/src/: consts.h  env.c  env.h  printer.c  printer.h  reader.c  reader.h  step0_repl.c  step1_read_print.c  step2_eval.c  step3_env.c  types.c  types.h
